--- a/index.html
+++ b/index.html
@@ -1,1 +1,57 @@
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>CMAPS | Inteligencia Territorial y Soluciones Estratégicas</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&family=Montserrat:wght@300;400;700&display=swap" rel="stylesheet">
+    <style>
+        :root { --accent: #00f2ff; }
+        body { font-family: 'Montserrat', sans-serif; background-color: #050608; color: #e2e8f0; overflow-x: hidden; }
+        h1, h2, h3, h4 { font-family: 'Orbitron', sans-serif; letter-spacing: 2px; }
+        .text-gradient { background: linear-gradient(to right, #fff, var(--accent)); -webkit-background-clip: text; -webkit-text-fill-color: transparent; }
+        .border-glow { border: 1px solid rgba(0, 242, 255, 0.2); box-shadow: 0 0 20px rgba(0, 242, 255, 0.1); }
+    </style>
+</head>
+<body>
 
+    <nav class="fixed w-full z-50 bg-black/80 backdrop-blur-md border-b border-white/10 py-4 px-6">
+        <div class="max-w-7xl mx-auto flex justify-between items-center">
+            <div class="text-xl font-bold tracking-tighter italic">
+                CMAPS<span class="text-cyan-400">.</span>
+            </div>
+            <div class="hidden md:flex space-x-8 text-xs uppercase tracking-widest font-bold">
+                <a href="#experiencia" class="hover:text-cyan-400 transition">Experiencia</a>
+                <a href="#productos" class="hover:text-cyan-400 transition">Productos</a>
+                <a href="#nosotros" class="hover:text-cyan-400 transition">Nosotros</a>
+                <a href="mailto:mapanalisis@gmail.com" class="text-cyan-400 border border-cyan-400 px-4 py-1 rounded-full hover:bg-cyan-400 hover:text-black transition">Contacto</a>
+            </div>
+        </div>
+    </nav>
+
+    <section class="relative min-h-screen flex items-center justify-center pt-20 overflow-hidden">
+        <div class="absolute inset-0 z-0 opacity-20">
+            <div class="absolute inset-0 bg-gradient-to-b from-transparent to-[#050608]"></div>
+        </div>
+        
+        <div class="relative z-10 text-center px-4 max-w-5xl mx-auto" data-aos="fade-up">
+            <h4 class="text-cyan-500 text-xs md:text-sm uppercase tracking-[0.3em] mb-4 font-bold">Liderazgo en Inteligencia Territorial</h4>
+            <h1 class="text-4xl md:text-7xl font-extrabold mb-6 leading-tight">
+                Decisiones de <span class="text-gradient">Alta Precisión</span>
+            </h1>
+            <p class="text-lg md:text-xl text-slate-400 mb-10 max-w-3xl mx-auto font-light leading-relaxed">
+                Desde 2008, transformamos datos geográficos en activos estratégicos. Respaldados por más de 30 años de experiencia en cartografía y análisis GIS para los sectores más exigentes de México.
+            </p>
+            <div class="flex flex-col md:flex-row gap-4 justify-center">
+                <a href="#productos" class="bg-white text-black px-8 py-4 rounded-full font-bold uppercase text-xs tracking-widest hover:bg-cyan-400 transition shadow-xl">Ver Soluciones</a>
+                <a href="#experiencia" class="border border-white/20 px-8 py-4 rounded-full font-bold uppercase text-xs tracking-widest hover:bg-white/10 transition">Nuestra Trayectoria</a>
+            </div>
+        </div>
+    </section>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
+    <script>AOS.init({ duration: 1000, once: true });</script>
+</body>
+</html>
