--- a/index.html
+++ b/index.html
@@ -50,7 +50,82 @@
             </div>
         </div>
     </section>
+<section id="experiencia" class="py-24 bg-[#080a0c]">
+        <div class="max-w-7xl mx-auto px-6">
+            <div class="grid md:grid-cols-2 gap-16 items-center">
+                <div data-aos="fade-right">
+                    <h2 class="text-3xl md:text-5xl font-bold mb-8 leading-tight">30 Años de <br><span class="text-cyan-400">Autoridad Geográfica</span></h2>
+                    <p class="text-slate-400 text-lg mb-6">
+                        No solo hacemos mapas; diseñamos estructuras de datos que han modernizado el catastro de las ciudades más importantes de México y optimizado redes digitales en Estados Unidos.
+                    </p>
+                    <ul class="space-y-4 text-sm tracking-wide text-slate-300">
+                        <li class="flex items-center gap-3">
+                            <span class="w-2 h-2 bg-cyan-400 rounded-full"></span>
+                            Modernización Catastral: Cancún, Naucalpan, Acapulco y Metepec.
+                        </li>
+                        <li class="flex items-center gap-3">
+                            <span class="w-2 h-2 bg-cyan-400 rounded-full"></span>
+                            Infraestructura Crítica: Proyectos estratégicos para la CFE.
+                        </li>
+                        <li class="flex items-center gap-3">
+                            <span class="w-2 h-2 bg-cyan-400 rounded-full"></span>
+                            Proyectos Internacionales: Diseño de redes digitales para Spectrum (USA).
+                        </li>
+                    </ul>
+                </div>
 
+                <div class="grid grid-cols-2 gap-4" data-aos="fade-left">
+                    <div class="p-8 border-glow bg-white/5 rounded-2xl text-center">
+                        <div class="text-4xl font-bold text-cyan-400 mb-2">+30</div>
+                        <div class="text-[10px] uppercase tracking-widest text-slate-500 font-bold">Años de Trayectoria</div>
+                    </div>
+                    <div class="p-8 border-glow bg-white/5 rounded-2xl text-center mt-8">
+                        <div class="text-4xl font-bold text-white mb-2">100%</div>
+                        <div class="text-[10px] uppercase tracking-widest text-slate-500 font-bold">Precisión Técnica</div>
+                    </div>
+                    <div class="p-8 border-glow bg-white/5 rounded-2xl text-center">
+                        <div class="text-4xl font-bold text-white mb-2">GIS</div>
+                        <div class="text-[10px] uppercase tracking-widest text-slate-500 font-bold">Metodología Propia</div>
+                    </div>
+                    <div class="p-8 border-glow bg-white/5 rounded-2xl text-center mt-8">
+                        <div class="text-4xl font-bold text-cyan-400 mb-2">MX/US</div>
+                        <div class="text-[10px] uppercase tracking-widest text-slate-500 font-bold">Alcance Binacional</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="productos" class="py-24 px-6 relative">
+        <div class="max-w-7xl mx-auto">
+            <div class="text-center mb-16" data-aos="zoom-in">
+                <h2 class="text-2xl md:text-4xl font-bold uppercase tracking-tighter">Nuestras Soluciones de Élite</h2>
+                <div class="w-24 h-1 bg-cyan-400 mx-auto mt-4"></div>
+            </div>
+
+            <div class="grid md:grid-cols-2 gap-8">
+                <div class="group p-8 md:p-12 rounded-3xl border border-white/10 bg-gradient-to-br from-white/5 to-transparent hover:border-cyan-400/50 transition-all duration-500" data-aos="fade-up">
+                    <h3 class="text-2xl font-bold mb-4 group-hover:text-cyan-400 transition">IRSO CMAPS</h3>
+                    <p class="text-slate-400 mb-8 font-light">
+                        Índice de Riesgo Socio Operativo. Una métrica científica de 300 puntos para proteger inversiones, operaciones y personas en entornos de incertidumbre.
+                    </p>
+                    <a href="https://politeiacmaps-hue.github.io/cmaps-riesgo-irso/" target="_blank" class="inline-flex items-center text-xs font-bold uppercase tracking-[0.2em] text-cyan-400 hover:text-white transition">
+                        Explorar Metodología <span class="ml-2">→</span>
+                    </a>
+                </div>
+
+                <div class="group p-8 md:p-12 rounded-3xl border border-white/10 bg-gradient-to-br from-white/5 to-transparent hover:border-cyan-400/50 transition-all duration-500" data-aos="fade-up" data-aos-delay="200">
+                    <h3 class="text-2xl font-bold mb-4 group-hover:text-cyan-400 transition">POLITEIA</h3>
+                    <p class="text-slate-400 mb-8 font-light">
+                        Inteligencia Estructural y Defensa de Activos. Cartografía temática y análisis histórico-electoral para decisiones estratégicas de alto nivel.
+                    </p>
+                    <a href="https://politeiacmaps-hue.github.io/" target="_blank" class="inline-flex items-center text-xs font-bold uppercase tracking-[0.2em] text-cyan-400 hover:text-white transition">
+                        Ver Sistema <span class="ml-2">→</span>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </section>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
     <script>AOS.init({ duration: 1000, once: true });</script>
 </body>
