--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     <ul class="space-y-4 text-sm tracking-wide text-slate-300">
                         <li class="flex items-center gap-3">
                             <span class="w-2 h-2 bg-cyan-400 rounded-full"></span>
-                            Modernización Catastral: Cancún, Naucalpan, Acapulco y Metepec.
+                            Modernización Catastral: Puebla, Naucalpan, Acapulco y Cancún.
                         </li>
                         <li class="flex items-center gap-3">
                             <span class="w-2 h-2 bg-cyan-400 rounded-full"></span>
