--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <div class="hidden md:flex space-x-8 text-xs uppercase tracking-widest font-bold">
                 <a href="#experiencia" class="hover:text-cyan-400 transition">Experiencia</a>
                 <a href="#productos" class="hover:text-cyan-400 transition">Productos</a>
-                <a href="#nosotros" class="hover:text-cyan-400 transition">Nosotros</a>
+                <a href="#nosotros" class="text-cyan-400 border border-cyan-400 px-4 py-1 rounded-full hover:bg-cyan-400 hover:text-black transition">Contacto</a>
                 <a href="mailto:mapanalisis@gmail.com" class="text-cyan-400 border border-cyan-400 px-4 py-1 rounded-full hover:bg-cyan-400 hover:text-black transition">Contacto</a>
             </div>
         </div>
@@ -126,6 +126,43 @@
             </div>
         </div>
     </section>
+    <section id="nosotros" class="py-24 bg-black">
+        <div class="max-w-7xl mx-auto px-6">
+            <div class="text-center mb-16" data-aos="fade-up">
+                <h2 class="text-2xl md:text-4xl font-bold uppercase tracking-tighter italic text-gradient">Liderazgo Exclusivo</h2>
+                <p class="text-slate-500 mt-4 tracking-[0.2em] text-xs font-bold uppercase">La mente detrás de la precisión</p>
+            </div>
+
+            <div class="grid md:grid-cols-2 gap-12">
+                <div class="p-8 border-glow bg-white/5 rounded-3xl" data-aos="fade-right">
+                    <h3 class="text-xl font-bold text-white mb-2">Rosa María Cabello Solano</h3>
+                    <p class="text-cyan-400 text-xs font-bold uppercase tracking-widest mb-4 italic">Directora de Operaciones GIS | IPN</p>
+                    <p class="text-slate-400 text-sm leading-relaxed font-light">
+                        Estratega con más de 30 años de experiencia en la gestión de bases de datos geográficas y supervisión de proyectos internacionales. Experta en modernización catastral y coordinación de equipos de alto rendimiento.
+                    </p>
+                </div>
+
+                <div class="p-8 border-glow bg-white/5 rounded-3xl" data-aos="fade-left">
+                    <h3 class="text-xl font-bold text-white mb-2">José Antonio Cardeña Medina</h3>
+                    <h4 class="text-cyan-400 text-xs font-bold uppercase tracking-widest mb-4 italic">Arquitecto de Inteligencia Territorial</h4>
+                    <p class="text-slate-400 text-sm leading-relaxed font-light">
+                        Especialista en el diseño de soluciones cartográficas a medida. Ha liderado la transformación de datos complejos en herramientas de decisión para seguridad pública e infraestructura crítica en México y EE. UU.
+                    </p>
+                </div>
+            </div>
+
+            <div class="mt-20 text-center" data-aos="zoom-in">
+                <p class="text-slate-500 text-xs uppercase tracking-[0.5em] mb-4">Briefing Confidencial</p>
+                <a href="mailto:mapanalisis@gmail.com" class="text-2xl md:text-5xl font-bold text-white hover:text-cyan-400 transition break-all">
+                    mapanalisis@gmail.com
+                </a>
+            </div>
+        </div>
+    </section>
+
+    <footer class="py-12 text-center text-[10px] tracking-[0.4em] text-slate-600 uppercase">
+        © 2026 CMAPS · Inteligencia Territorial · Todos los derechos reservados
+    </footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
     <script>AOS.init({ duration: 1000, once: true });</script>
 </body>
