--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                     <h3 class="text-xl font-bold text-white mb-2">Rosa María Cabello Solano</h3>
                     <p class="text-cyan-400 text-xs font-bold uppercase tracking-widest mb-4 italic">Directora de Operaciones GIS | IPN</p>
                     <p class="text-slate-400 text-sm leading-relaxed font-light">
-                        Estratega con más de 30 años de experiencia en la gestión de bases de datos geográficas y supervisión de proyectos internacionales. Experta en modernización catastral y coordinación de equipos de alto rendimiento.
+                        Estratega con más de 30 años de experiencia en la gestión de bases de datos geográficas y supervisión de proyectos internacionales. Modelado de variables e indicadores. Validación estadistica de hipótesis. 
                     </p>
                 </div>
 
@@ -146,7 +146,7 @@
                     <h3 class="text-xl font-bold text-white mb-2">José Antonio Cardeña Medina</h3>
                     <h4 class="text-cyan-400 text-xs font-bold uppercase tracking-widest mb-4 italic">Arquitecto de Inteligencia Territorial</h4>
                     <p class="text-slate-400 text-sm leading-relaxed font-light">
-                        Especialista en el diseño de soluciones cartográficas a medida. Ha liderado la transformación de datos complejos en herramientas de decisión para seguridad pública e infraestructura crítica en México y EE. UU.
+                        Especialista en el diseño de soluciones cartográficas a medida. Ha liderado la transformación de datos complejos en herramientas de decisión para seguridad pública e infraestructura. Experto en modernización catastral y coordinación de equipos de alto rendimiento.
                     </p>
                 </div>
             </div>
