--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@
             <div class="hidden md:flex space-x-8 text-xs uppercase tracking-widest font-bold">
                 <a href="#experiencia" class="hover:text-cyan-400 transition">Experiencia</a>
                 <a href="#productos" class="hover:text-cyan-400 transition">Productos</a>
-                <a href="#nosotros" class="text-cyan-400 border border-cyan-400 px-4 py-1 rounded-full hover:bg-cyan-400 hover:text-black transition">Contacto</a>
                 <a href="mailto:mapanalisis@gmail.com" class="text-cyan-400 border border-cyan-400 px-4 py-1 rounded-full hover:bg-cyan-400 hover:text-black transition">Contacto</a>
             </div>
         </div>
@@ -50,7 +49,8 @@
             </div>
         </div>
     </section>
-<section id="experiencia" class="py-24 bg-[#080a0c]">
+
+    <section id="experiencia" class="py-24 bg-[#080a0c]">
         <div class="max-w-7xl mx-auto px-6">
             <div class="grid md:grid-cols-2 gap-16 items-center">
                 <div data-aos="fade-right">
@@ -109,7 +109,7 @@
                     <p class="text-slate-400 mb-8 font-light">
                         Índice de Riesgo Socio Operativo. Una métrica científica de 300 puntos para proteger inversiones, operaciones y personas en entornos de incertidumbre.
                     </p>
-                    <a href="https://politeiacmaps-hue.github.io/cmaps-riesgo-irso/" target="_blank" class="inline-flex items-center text-xs font-bold uppercase tracking-[0.2em] text-cyan-400 hover:text-white transition">
+                    <a href="https://politeiacmaps-hue.github.io/cmaps-riesgo-irso/" target="_self" class="inline-flex items-center text-xs font-bold uppercase tracking-[0.2em] text-cyan-400 hover:text-white transition">
                         Explorar Metodología <span class="ml-2">→</span>
                     </a>
                 </div>
@@ -119,13 +119,14 @@
                     <p class="text-slate-400 mb-8 font-light">
                         Inteligencia Estructural y Defensa de Activos. Cartografía temática y análisis histórico-electoral para decisiones estratégicas de alto nivel.
                     </p>
-                    <a href="https://politeiacmaps-hue.github.io/" target="_blank" class="inline-flex items-center text-xs font-bold uppercase tracking-[0.2em] text-cyan-400 hover:text-white transition">
+                    <a href="https://politeiacmaps-hue.github.io/" target="_self" class="inline-flex items-center text-xs font-bold uppercase tracking-[0.2em] text-cyan-400 hover:text-white transition">
                         Ver Sistema <span class="ml-2">→</span>
                     </a>
                 </div>
             </div>
         </div>
     </section>
+
     <section id="nosotros" class="py-24 bg-black">
         <div class="max-w-7xl mx-auto px-6">
             <div class="text-center mb-16" data-aos="fade-up">
@@ -138,7 +139,7 @@
                     <h3 class="text-xl font-bold text-white mb-2">Rosa María Cabello Solano</h3>
                     <p class="text-cyan-400 text-xs font-bold uppercase tracking-widest mb-4 italic">Directora de Operaciones GIS | IPN</p>
                     <p class="text-slate-400 text-sm leading-relaxed font-light">
-                        Estratega con más de 30 años de experiencia en la gestión de bases de datos geográficas y supervisión de proyectos internacionales. Modelado de variables e indicadores. Validación estadistica de hipótesis. 
+                        Estratega con más de 30 años de experiencia en la gestión de bases de datos geográficas y supervisión de proyectos internacionales. Modelado de variables e indicadores. Validación estadística de hipótesis. 
                     </p>
                 </div>
 
