--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 
             <div class="grid md:grid-cols-2 gap-12">
                <div class="p-8 border-glow bg-white/5 rounded-3xl" data-aos="fade-right">
-    <h3 class="text-xl font-bold text-white mb-2">Rosa María Cabello Solano</h3>
+    <h3 class="text-xl font-bold text-white mb-2">Rosa María Caballero Solano</h3>
     <p class="text-cyan-400 text-xs font-bold uppercase tracking-widest mb-4 italic">Directora de Operaciones GIS | IPN</p>
     <p class="text-slate-400 text-sm leading-relaxed font-light">
         Estratega con más de 30 años de experiencia en la gestión de bases de datos geográficas y supervisión de proyectos internacionales. Modelado de variables e indicadores. Validación estadística de hipótesis. 
