Update job title for José Antonio Cardeña Medina

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 
                 <div class="p-8 border-glow bg-white/5 rounded-3xl" data-aos="fade-left">
                     <h3 class="text-xl font-bold text-white mb-2">José Antonio Cardeña Medina</h3>
-                    <h4 class="text-cyan-400 text-xs font-bold uppercase tracking-widest mb-4 italic">Arquitecto de Inteligencia Territorial</h4>
+                    <h4 class="text-cyan-400 text-xs font-bold uppercase tracking-widest mb-4 italic">Inteligencia Territorial</h4>
                     <p class="text-slate-400 text-sm leading-relaxed font-light">
                         Especialista en el diseño de soluciones cartográficas a medida. Ha liderado la transformación de datos complejos en herramientas de decisión para seguridad pública e infraestructura. Experto en modernización catastral y coordinación de equipos de alto rendimiento.
                     </p>
